www/css/design-1.4.2.css
/* ... */
.nativeDroidCards > li[data-cards-type="weather"] .detail li {
	display: inline-block;
}
.nativeDroidCards > li[data-cards-type="weather"] .detail li:first-child {
	width: 25%;
}
.nativeDroidCards > li[data-cards-type="weather"] .detail li:first-child span {
	display: block;
	width: auto;
}
.nativeDroidCards > li[data-cards-type="weather"] .detail li:first-child .sunny {
	font-size: 60px;
}
.nativeDroidCards > li[data-cards-type="weather"] .detail li:nth-child(2) {
	width: 70%;
	font-size: 115px;
	text-align: right;
}

.nativeDroidCards > li[data-cards-type="weather"] .week li strong,.nativeDroidCards > li[data-cards-type="weather"] .week li span,.nativeDroidCards > li[data-cards-type="weather"] .week i {
	display: block;
	width: auto;
}

.nativeDroidCards > li[data-cards-type="weather"] .week li {
	width: 22%;
	display: inline-block;
}
.nativeDroidCards > li[data-cards-type="weather"] .week li:last-child {
	border-right: 0px solid rgba(0,0,0,0.05);
}

.nativeDroidCards > li[data-cards-type="weather"] .sunny {
	color: #FFF000;
}

.nativeDroidCards ul[data-nativedroid-plugin="twitter"] li,.nativeDroidCards ul[data-nativedroid-plugin="twitter"] {
	padding: 0px;
	margin: 7px 0px 0px 0px;
}

.nativeDroidCards ul[data-nativedroid-plugin="twitter"] li img {
	float: left;
	margin: 7px;
}

.nativeDroidCards ul[data-nativedroid-plugin="twitter"] a,.nativeDroidCards ul[data-nativedroid-plugin="twitter"] p,.nativeDroidCards ul[data-nativedroid-plugin="twitter"] h2 {
	font-size: 14px;
	padding: 0px;
	margin: 0px;
	border-top: 0px;
}

.nativeDroidCards > li .map {
	margin: 0;
    padding: 0;
	width: 100%;
    height: 150px;
}

.nativeDroidGallery {
	list-style: none;
	margin: auto auto;
	padding: 0px 0px 0px 0px;
	width: 100%;
	overflow: hidden;
}

.nativeDroidGallery li {
	background-repeat: no-repeat;
	background-size: contain;
	background-position: center center;
	display: block;
	float: left;
	width: 75px;
	height: 75px;
	overflow: hidden;
	margin: 4px 4px 0px 0px;
	padding: 0px 0px 0px 0px;
/*	top: 0px;
	left: -100%;*/
	position: relative;
	-webkit-animation: slideImagesIn 1.5s 1;
	-webkit-animation-fill-mode: forwards;
	-moz-animation: slideImagesIn 1.5s 1;
	-moz-animation-fill-mode: forwards;
	animation: slideImagesIn 1.5s 1;
	animation-fill-mode: forwards;
	
	-webkit-transition: background-image 0.75s linear;
	-moz-transition: background-image 0.75s linear;
	-ms-transition: background-image 0.75s linear;
	-o-transition: background-image 0.75s linear;
	transition: background-image 0.75s linear;
	
}

.nativeDroidGallery li span {
	display: none;
}


@-webkit-keyframes galleryActivate {	0% { -webkit-transform: scale(1.0,1.0);	} 50% {	-webkit-transform: scale(0.8,0.8); } 100% {	-webkit-transform: scale(1,1); } }
@-moz-keyframes galleryActivate {	0% { -moz-transform: scale(1,1);	} 50% {	-moz-transform: scale(0.8,0.8); } 100% {	-moz-transform: scale(1,1); } }
@-ms-keyframes galleryActivate {	0% { -ms-transform: scale(1,1);	} 50% {	-ms-transform: scale(0.8,0.8); } 100% {	-ms-transform: scale(1,1); } }
@-o-keyframes galleryActivate {	0% { -o-transform: scale(1,1);	} 50% {	-o-transform: scale(0.8,0.8); } 100% {	-o-transform: scale(1,1); } }
@keyframes galleryActivate {	0% { transform: scale(1,1);	} 50% {	transform: scale(0.8,0.8); } 100% {	transform: scale(1,1); } }


.nativeDroidGallery .overlay {
	position: fixed;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	z-index: 99998;
	background: rgba(0,0,0,0.9);
	display: none;
}

.nativeDroidGallery li.active  {
	position: fixed;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	z-index: 99999;
	background-repeat: no-repeat;
	background-size: contain;
	background-position: center center;

	-webkit-animation: galleryActivate 0.5s 1;
	-moz-animation: galleryActivate 0.5s 1;
	-o-animation: galleryActivate 0.5s 1;
	-ms-animation: galleryActivate 0.5s 1;
	animation: galleryActivate 0.5s 1;
	animation-fill-mode: forwards;

	-webkit-transition: left 0.4s;
	-moz-transition: left 0.4s;
	-ms-transition: left 0.4s;
	-o-transition: left 0.4s;
	transition: left 0.4s;
}

.nativeDroidGallery li.slideLeft {
	left: -100% !important;
}
.nativeDroidGallery li.slideRight {
	left: 100% !important;
}

.nativeDroidGallery li .closeTrigger {
	display: none;
	position: absolute;
	top: 5px;
	right: 5px;
	background-color: rgba(0,0,0,0.5);
	border-radius: 7px;
	padding: 7px;
	opacity: 0.8;
}

.nativeDroidGallery li.active .closeTrigger {
	display: block;
}

.nativeDroidGallery li.active span {
	display: block;
	position: absolute;
	bottom: 0px;
	left: 0px;
	width: 100%;
	background-color: rgba(0,0,0,0.5);
	padding: 7px;
}

.nativeDroidGallery li.active.zoom  {
	overflow: auto;
 	-webkit-overflow-scrolling:touch;
	-webkit-transform: translate3d(0,0,0);
}

.nativeDroidGallerySetList {

	-webkit-transition: left 0.4s;
	-moz-transition: left 0.4s;
	-ms-transition: left 0.4s;
	-o-transition: left 0.4s;
	transition: left 0.4s;
}


.nativeDroidGallerySetList.slideLeft {
	position: fixed;
	left: -100%;
	width: 100%;
	height: 100%;
	overflow: hidden;	
}

.nativeDroidGallery li.active.zoom .fullscreenImage {
	position: absolute;
}

.nativeDroidGallery li.active.zoom span  {
	display: none;
}

.nativeDroidSplashscreen {
	display: block;
	background-color: #000000;
	position: fixed;
	width: 100%;
	height: 100%;
	z-index: 99999;
	background-size: 100% 100%;
	background-repeat: no-repeat;
	background-position: center center;
	overflow: hidden;
}

@-webkit-keyframes fadeOut { 0% { opacity: 1; } 100% { opacity: 0; } }
@-moz-keyframes fadeOut { 0% { opacity: 1; } 100% { opacity: 0; } }
@-o-keyframes fadeOut { 0% { opacity: 1; } 100% { opacity: 0; } }
@-ms-keyframes fadeOut { 0% { opacity: 1; } 100% { opacity: 0; } }
@keyframes fadeOut { 0% { opacity: 1; } 100% { opacity: 0; } }
/* ... */

